# dbdev

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  PLAN-docs-migration.md  PLAN.md  README.md  index.html  mkdocs.yaml  package-lock.json  package.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: cli.yaml  dependabot.yml  deploy-staging.yaml  manual-release-brew-and-scoop.yaml  pgTAP.yaml  pre-commit_hooks.yaml  prettier.yaml  release-cli.yaml  release-homebrew-tap.yaml  release-scoop-bucket.yaml  test-linux-arm-build.yaml  test-workflow.yaml  update-supabase-js.yml  website-tests.yaml
cli/: Cargo.toml  README.md  client.py  index.html  setup.py
cli/dbdev/: cli.py
cli/src/: client.rs  config.rs  credential_store.rs  main.rs  mod.rs  models.rs  secret.rs  util.rs
cli/src/commands/: add.rs  install.rs  list.rs  login.rs  mod.rs  publish.rs  signup.rs  uninstall.rs
cli/src/dbdev/: __init__.py  cli.py  config.py  models.py  prompt.py
docs/: cli.md  declarative-schema.md  extension_structure.md  index.md  install-a-package.md  install-cli.md  install-in-db-client.md  install.md  publish-extension.md  publish.md  sql-client.md  welcome.md
examples/math/: README.md  database.json  math--0.0.2.sql  math.control
extension_structure/: index.html
install/: index.html
install-a-package/: index.html
install-cli/: index.html
install-in-db-client/: index.html
publish/: index.html
publish-extension/: index.html
scripts/: declarative-dbdev-init.sh  declarative-dbdev-update.sh
search/: search_index.json
supabase/: config.toml  seed.sql
supabase/functions/: hello.ts
supabase/migrations/: 20220117141357_extensions.sql  20220117141359_app_schema.sql  20220117141507_semver.sql  20220117141645_valid_name_type.sql  20220117141942_email_address_type.sql  20220117142104_account_and_org_tables.sql  20220117142137_package_tables.sql  20220117142138_developer_tools.sql  20220117142141_security_utilities.sql  20220117142142_security_definitions.sql  20220117155719_v0_schema.sql  20220117155720_v0_public_views.sql  20220117155720_v0_views.sql  20220117155720_views.sql  20220117155820_rpc.sql  20220117155820_v0_public_rpc.sql  20220117155820_v0_rpc.sql  20230323180034_reserved_user_accts.sql  20230324135114_installer.sql  20230324135114_package_installer.sql  20230328185043_initial_package.sql  20230328185043_olirice_asciiplot.sql  20230328185043_package_asciiplot.sql  20230330155137_supabase_dbdev.sql  20230330155137_supabase_dbdev_v0_0_2.sql  20230331145934_burggraf-pg_headerkit.sql  20230331163908_olirice-index_advisor.sql  20230331163908_olirice-send_secret.sql  20230331163909_olirice-read_once.sql  20230331163909_olirice-send_secret.sql  20230404162614_michelp-adminpack.sql  20230404200155_michelp-github-tle-installer.sql  20230405083103_fix_auth_schema_values.sql  20230405085810_fix_avatars_handle.sql  (+35 more)
tlecli/: Cargo.toml
tlecli/src/: main.rs
website/: .env.example  .gitignore  .prettierignore  README.md  components.json  jest.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  source.config.ts  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+234 files in other folders)
