[package]
name = "dbdev"
version = "0.1.6"
edition = "2021"
authors = ["supabase"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3"
postgrest = "1.5.0"
regex = "1.11"
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "chrono",
    "uuid",
    "runtime-tokio-rustls",
] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.9.4", features = ["preserve_order"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde"] }
