[package]
name = "dbdev"
version = "0.1.7"
edition = "2021"
authors = ["supabase"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
postgrest = "1.6.0"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "native-tls-vendored"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "chrono",
    "uuid",
    "runtime-tokio-rustls",
] }
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = { version = "0.9.11", features = ["preserve_order"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde"] }
